--- a/promessas_05.html
+++ b/promessas_05.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <h1>SÉRIE PARALELO</h1>
+    <h1>CORRIDA BARREIRA</h1>
     <hr>
 <pre><code class="javascript"></code></pre>
   <textarea></textarea>
