--- a/promessas_04.html
+++ b/promessas_04.html
@@ -26,8 +26,7 @@
         id++
       })
 
-    })('ping_random.js')
-    </script>
+    })('ping_random.js')</script>
     <style>
       body {
       	text-align: center;
